--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="IMG_20200905_204026.jpg" height="450px" class="d-block w-100" alt="...">
+      <img src="![IMG_20200905_204026](https://user-images.githubusercontent.com/69887004/92319973-7bdc6700-f03b-11ea-9d25-663a382afaa1.jpg)
+" height="450px" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="IMG_20200905_204048.jpg" height="450px" class="d-block w-100" alt="...">
+      <img src="![IMG_20200905_204026](https://user-images.githubusercontent.com/69887004/92319973-7bdc6700-f03b-11ea-9d25-663a382afaa1.jpg)
+" height="450px" class="d-block w-100" alt="...">
     </div>
     
   </div>
