--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 <br>
 <hr>
 <br>
-    <img  class="container" class="pxx" src="https://user-images.githubusercontent.com/69887004/92320572-0cb54180-f040-11ea-9989-b0dd4961e504.jpg)
-"  height="700px" width="600px" class="img-fluid" alt="Responsive image">
+    <img  class="container" class="pxx" src="https://user-images.githubusercontent.com/69887004/92320572-0cb54180-f040-11ea-9989-b0dd4961e504.jpg"  height="700px" width="600px" class="img-fluid" alt="Responsive image">
     
 
 <br>
