--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 
 
-    <title>Hello, world!</title>
+    <title>Hello, Ritu Raj!</title>
   </head>
   <body>
   <div  id="pst" class="container">
@@ -70,7 +70,7 @@
 <br>
 <hr>
 <br>
-    <img  class="container" class="pxx" src="https://user-images.githubusercontent.com/69887004/92320070-48e6a300-f03c-11ea-97fd-4e448c7a2d64.jpg"  height="670px" width="600px" class="img-fluid" alt="Responsive image">
+    <img  class="container" class="pxx" src="https://user-images.githubusercontent.com/69887004/92320812-032cd900-f042-11ea-95f1-a5ff92bf15c1.jpg"  height="670px" width="600px" class="img-fluid" alt="Responsive image">
    
 
 
